Atualizar o subAmbiSocial.html

--- a/subAmbiSocial.html
+++ b/subAmbiSocial.html
@@ -36,10 +36,10 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Familia</h1>
+								<h1>Ambiente Social</h1>
 							</header>
 							<div class="content">
-								<p>Família representa uma agregação de indivíduos unidos por laços afetivos ou de parentesco (consanguinidade)<br /></p>
+								<p>A dependência emocional no ambiente social pode levar à dificuldade de afirmar a própria identidade. Para evitar conflitos ou rejeição, a pessoa tende a adaptar seus gostos, opiniões e comportamentos às expectativas do grupo, o que prejudica a autenticidade e a construção de relações verdadeiras.<br /></p>
 							</div>
 						</div>
 					</section>
@@ -50,9 +50,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Impacto na Autonomia</h2>
+										<h2>Busca Excessiva por Aceitação</h2>
 									</header>
-									<p>A dependência emocional familiar muitas vezes impede que os indivíduos desenvolvam autonomia emocional e pessoal. Isso ocorre porque há uma necessidade constante de validação ou aprovação dos familiares, o que dificulta a tomada de decisões independentes. Com isso, as pessoas podem se sentir incapazes de assumir responsabilidades ou enfrentar desafios sozinhas, perpetuando a insegurança e a falta de autoconfiança.</p>
+									<p>A dependência emocional no ambiente social pode levar à necessidade constante de agradar os outros para ser aceito, fazendo com que a pessoa sacrifique seus próprios valores e necessidades.</p>
 								</div>
 							</section>
 
@@ -65,9 +65,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Relações Tóxicas</h3>
+												<h3>Medo de Rejeição</h3>
 											</header>
-											<p>Quando há dependência emocional, as relações familiares podem se tornar tóxicas, caracterizadas por controle excessivo, chantagem emocional e manipulação. Nessas dinâmicas, o vínculo entre os membros da família deixa de ser saudável e passa a ser baseado em obrigação ou medo de rejeição, gerando conflitos constantes e desgaste emocional para todos os envolvidos.</p>
+											<p>O receio de ser rejeitado ou excluído é um dos principais traços da dependência emocional no contexto social. Esse medo pode levar a comportamentos de submissão, como evitar expressar opiniões divergentes ou estabelecer limites. Isso não apenas reduz a autenticidade, mas também pode resultar em relações desequilibradas, onde o indivíduo se sente explorado ou desvalorizado.</p>
 											<ul class="actions">
 				
 											</ul>
@@ -81,9 +81,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Ciclo de Repetição</h3>
+												<h3>Impacto no Bem-Estar Psicológico</h3>
 											</header>
-											<p>A dependência emocional familiar frequentemente se perpetua entre gerações. Crianças que crescem em ambientes onde a validação externa é essencial tendem a reproduzir esse comportamento em suas próprias relações futuras. Esse ciclo dificulta a construção de vínculos saudáveis e pode perpetuar padrões de relacionamento disfuncionais no núcleo familiar.</p>
+											<p>A necessidade constante de validação social pode gerar altos níveis de estresse, ansiedade e sentimentos de inadequação. A pessoa frequentemente se sente insegura em ambientes sociais, preocupada com julgamentos ou críticas. Essa pressão emocional afeta a autoestima e dificulta o desenvolvimento de confiança em si mesmo, ampliando o ciclo de dependência.</p>
 										</div>
 									</div>
 								</section>
@@ -99,9 +99,9 @@
           <section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>Dificuldade de Individualidade</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>No esforço de se encaixar em um grupo social, indivíduos emocionalmente dependentes muitas vezes suprimem suas características e opiniões únicas. Eles moldam suas ações para atender às expectativas dos outros, comprometendo seu senso de identidade. Essa falta de autenticidade não apenas prejudica o crescimento pessoal, mas também dificulta a construção de conexões verdadeiras e saudáveis.</p>
 				
 								</div>
 							</section>
