Atualizar o subAmbiSocial.html

--- a/subAmbiSocial.html
+++ b/subAmbiSocial.html
@@ -84,14 +84,16 @@
 												<h3>Impacto no Bem-Estar Psicológico</h3>
 											</header>
 											<p>A necessidade constante de validação social pode gerar altos níveis de estresse, ansiedade e sentimentos de inadequação. A pessoa frequentemente se sente insegura em ambientes sociais, preocupada com julgamentos ou críticas. Essa pressão emocional afeta a autoestima e dificulta o desenvolvimento de confiança em si mesmo, ampliando o ciclo de dependência.</p>
+											<ul class="actions">
+				
+											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a class="image">
-										<img alt="" data-position="25% 25%" />
-									</a>
-									
+										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									</a>								
 								</section>
 							</section>
 
