--- a/subAmbiSocial.html
+++ b/subAmbiSocial.html
@@ -93,20 +93,26 @@
 								<section>
 									<a class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
-									</a>								
-								</section>
-							</section>
+									</a>
+            </section>			
 
 						<!-- Three -->
           <section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>Dificuldade de Individualidade</h2>
-									</header>
-									<p>No esforço de se encaixar em um grupo social, indivíduos emocionalmente dependentes muitas vezes suprimem suas características e opiniões únicas. Eles moldam suas ações para atender às expectativas dos outros, comprometendo seu senso de identidade. Essa falta de autenticidade não apenas prejudica o crescimento pessoal, mas também dificulta a construção de conexões verdadeiras e saudáveis.</p>
+												<h3>Dificuldade de Individualidade</h3>
+											</header>
+											<p>No esforço de se encaixar em um grupo social, indivíduos emocionalmente dependentes muitas vezes suprimem suas características e opiniões únicas. Eles moldam suas ações para atender às expectativas dos outros, comprometendo seu senso de identidade. Essa falta de autenticidade não apenas prejudica o crescimento pessoal, mas também dificulta a construção de conexões verdadeiras e saudáveis.</p>
+											<ul class="actions">
 				
-								</div>
-							</section>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a class="image">
+										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									</a>
 
 					</div>			
 				
