Atualizar o subObjetos.html

--- a/subObjetos.html
+++ b/subObjetos.html
@@ -88,8 +88,8 @@
 									</div>
 								</section>
 								<section>
-									<a class="image">
-										<img alt="" data-position="25% 25%" />
+									<a href class="image">
+										<img src="images/pic20.jpg" alt="" data-position="center center" />
 									</a>
 									
 								</section>
