Atualizar o subRelacionamentos.html

--- a/subRelacionamentos.html
+++ b/subRelacionamentos.html
@@ -33,10 +33,10 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
+								<img src="images/pic21.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Familia</h1>
+								<h1>Relacionamentos</h1>
 							</header>
 							<div class="content">
 								<p>Família representa uma agregação de indivíduos unidos por laços afetivos ou de parentesco (consanguinidade)<br /></p>
@@ -50,9 +50,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Impacto na Autonomia</h2>
+										<h2>Dependência Emocional em Relacionamentos</h2>
 									</header>
-									<p>A dependência emocional familiar muitas vezes impede que os indivíduos desenvolvam autonomia emocional e pessoal. Isso ocorre porque há uma necessidade constante de validação ou aprovação dos familiares, o que dificulta a tomada de decisões independentes. Com isso, as pessoas podem se sentir incapazes de assumir responsabilidades ou enfrentar desafios sozinhas, perpetuando a insegurança e a falta de autoconfiança.</p>
+									<p>A dependência emocional pode surgir em qualquer tipo de relacionamento, seja amoroso, familiar ou de amizade. Ela se caracteriza pela dificuldade de estabelecer limites saudáveis e pela necessidade constante de aprovação ou atenção do outro. Essa dinâmica cria uma sensação de insegurança e pode prejudicar a individualidade de quem é dependente.</p>
 								</div>
 							</section>
 
@@ -60,14 +60,14 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="images/pic22.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Relações Tóxicas</h3>
+												<h3>Impactos nos Relacionamentos</h3>
 											</header>
-											<p>Quando há dependência emocional, as relações familiares podem se tornar tóxicas, caracterizadas por controle excessivo, chantagem emocional e manipulação. Nessas dinâmicas, o vínculo entre os membros da família deixa de ser saudável e passa a ser baseado em obrigação ou medo de rejeição, gerando conflitos constantes e desgaste emocional para todos os envolvidos.</p>
+											<p>Nos relacionamentos em geral, a dependência emocional pode gerar dinâmicas desequilibradas, onde uma das partes se sente sobrecarregada ou responsável pelo bem-estar emocional da outra. Isso frequentemente resulta em ressentimentos, afastamento e dificuldades na construção de vínculos saudáveis. Além disso, pode limitar o crescimento pessoal e prejudicar a qualidade das relações.</p>
 											<ul class="actions">
 				
 											</ul>
@@ -76,20 +76,20 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/pic23.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Ciclo de Repetição</h3>
+												<h3>Caminhos para Melhorar os Relacionamentos com Dependência Emocional</h3>
 											</header>
-											<p>A dependência emocional familiar frequentemente se perpetua entre gerações. Crianças que crescem em ambientes onde a validação externa é essencial tendem a reproduzir esse comportamento em suas próprias relações futuras. Esse ciclo dificulta a construção de vínculos saudáveis e pode perpetuar padrões de relacionamento disfuncionais no núcleo familiar.</p>
+											<p>Melhorar os relacionamentos afetados pela dependência emocional exige o desenvolvimento de habilidades como comunicação assertiva e respeito mútuo. Aprender a valorizar a individualidade, tanto a própria quanto a do outro, é essencial para criar vínculos mais equilibrados. Além disso, buscar momentos de autocuidado e fortalecer a capacidade de lidar com a solidão ajuda a reduzir a necessidade de aprovação constante e promove uma relação mais saudável.</p>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a class="image">
-										<img alt="" data-position="25% 25%" />
+										<img src="images/pic24.jpg" alt="" data-position="top center" />
 									</a>
 									
 								</section>
