--- a/inf.html
+++ b/inf.html
@@ -39,7 +39,7 @@
 										<h1>Info.</h1>
 									</header>
 									<span class="image main"><img src="images/pic10.jpg" alt=""/></span>
-									<p></p>
+									<p>Os cooperadores desse site foram Brayan Charles, Arthur Prado e Ângelo, com a contribuição desses três alunos do curso de TI da escola Etec Maria Cristina Medeiros ou apenas Etec MCM esse site foi possível a partir de uma template de base e depois disso muita programação e alterações juntamente com adições e contradições dentro do planejamento e prazo de entrega.</p>
 								</div>
 							</section>
 
