--- a/generic.html
+++ b/generic.html
@@ -105,7 +105,7 @@
 							<li><a href="https://github.com/ArthurAsilva/LacosInvisiveis" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado & Brayan C.</a></li>
+							<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado, Brayan C. & Ângelo I.</a></li>
 						</ul>
 					</div>
 				</footer>
