--- a/inf.html
+++ b/inf.html
@@ -36,10 +36,11 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Info.</h1>
+										<h1>Informações</h1>
 									</header>
 									<span class="image main"><img src="images/pic10.jpg" alt=""/></span>
 									<p>Os cooperadores desse site foram Brayan Charles, Arthur Prado e Ângelo, com a contribuição desses três alunos do curso de TI da escola Etec Maria Cristina Medeiros ou apenas Etec MCM esse site foi possível a partir de uma template de base e depois disso muita programação e alterações juntamente com adições e contradições dentro do planejamento e prazo de entrega.</p>
+									<p> A cooperadora para a parte de revisão e pesquisa das informações do site foi de Anna Beatriz, e com a sua contribuição dessa duas aluna do curso de TI da Etec MCM pudemos ter  as pesquisas sobres as informações do site além das revisões os códigos da outra parte.</p>
 								</div>
 							</section>
 
@@ -53,6 +54,7 @@
 						</ul>
 						<ul class="copyright">
 							<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado, Brayan C. & Ângelo I.</a></li>
+						</li><li>Conteudo e Revisão por:<a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
 						</ul>
 					</div>
 				</footer>
