--- a/subRelacionamentos.html
+++ b/subRelacionamentos.html
@@ -76,7 +76,7 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/pic23.jpg" alt="" data-position="top center" />
+										<img src="images/pic24.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -89,7 +89,7 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/pic24.jpg" alt="" data-position="top center" />
+										<img src="images/" alt="" data-position="top center" />
 									</a>
 									
 								</section>
@@ -106,6 +106,7 @@
 							</ul>
 							<ul class="copyright">
 								<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado & Brayan C</a></li>
+					      		</li><li>Conteudo e Revisão por:<a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
 							</ul>
 						</div>
 					</footer>
