--- a/subObjetos.html
+++ b/subObjetos.html
@@ -89,7 +89,7 @@
 								</section>
 								<section>
 									<a href class="image">
-										<img src="images/pic20.jpg" alt="" data-position="center center" />
+										<img src="images/" alt="" data-position="center center" />
 									</a>
 									
 								</section>
