--- a/subRelacionamentos.html
+++ b/subRelacionamentos.html
@@ -106,7 +106,7 @@
 							</ul>
 							<ul class="copyright">
 								<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado & Brayan C</a></li>
-					      		</li><li>Conteudo e Revisão por:<a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
+					      		</li><li>Conteudo e Revisão por:<a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatrize e isabele eduarda</a></li>
 							</ul>
 						</div>
 					</footer>
