--- a/inf.html
+++ b/inf.html
@@ -54,7 +54,7 @@
 						</ul>
 						<ul class="copyright">
 							<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado, Brayan C. & Ângelo I.</a></li>
-						</li><li>Conteudo e Revisão por:<a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz e isabele eduarda</a></li>
+						</li><li>Conteudo e Revisão por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
 						</ul>
 					</div>
 				</footer>
