--- a/inf.html
+++ b/inf.html
@@ -40,7 +40,7 @@
 									</header>
 									<span class="image main"><img src="images/pic10.jpg" alt=""/></span>
 									<p>Os cooperadores desse site foram Brayan Charles, Arthur Prado e Ângelo, com a contribuição desses três alunos do curso de TI da escola Etec Maria Cristina Medeiros ou apenas Etec MCM esse site foi possível a partir de uma template de base e depois disso muita programação e alterações juntamente com adições e contradições dentro do planejamento e prazo de entrega.</p>
-									<p> A cooperadora para a parte de revisão e pesquisa das informações do site foi de Anna Beatriz, e com a sua contribuição dessa duas aluna do curso de TI da Etec MCM pudemos ter  as pesquisas sobres as informações do site além das revisões os códigos da outra parte.</p>
+									<p> A cooperadora para a parte de revisão e pesquisa das informações do site foi de Anna Beatriz, e com a sua pudemos ter informações do site além das revisões geral do site.</p>
 								</div>
 							</section>
 
