--- a/generic.html
+++ b/generic.html
@@ -75,21 +75,21 @@
 								<div class="contact-method">
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Email</h3>
-									<a href="#">isabeledduarda87@gmail.com </a>
+									<a href="#"> pradoarthur555@gmail.com </a>
 								</div>
 							</section>
 							<section>
 								<div class="contact-method">
 									<span class="icon solid alt fa-phone"></span>
 									<h3>Phone</h3>
-									<span>(+55) 11 97477-5399 </span>
+									<span> +55 11 93489-1494 </span>
 								</div>
 							</section>
 							<section>
 								<div class="contact-method">
 									<span class="icon solid alt fa-home"></span>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road #5432<br />
+									<span>São Paulo <br />
 									São Paulo, TN 00000<br />
 									Brasil</span>
 								</div>
@@ -106,7 +106,7 @@
 						</ul>
 						<ul class="copyright">
 							<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado, Brayan C. & Ângelo I.</a></li>
-						</li><li>Conteudo e Revisão por:<a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
+						</li><li>Conteúdo e Revisão por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
 						</ul>
 					</div>
 				</footer>
