Atualizar o inf.html

--- a/inf.html
+++ b/inf.html
@@ -41,7 +41,7 @@
 									<span class="image main"><img src="images/pic10.jpg" alt=""/></span>
 									<p>Os cooperadores desse site foram Brayan Charles, Arthur Prado e Ângelo, com a contribuição desses três alunos do curso de TI da escola Etec Maria Cristina Medeiros ou apenas Etec MCM esse site foi possível a partir de uma template de base e depois disso muita programação e alterações juntamente com adições e contradições dentro do planejamento e prazo de entrega.</p>
 									<p>A cooperadora para a parte de revisão e pesquisa das informações do site foi de Anna Beatriz, e com a sua pudemos ter informações do site além das revisões geral do site.</p>
-             <h3>Menção honorável: Rian</h3>
+             <h3>Menção honrosa: Rian</h3>
 								</div>
 							</section>
 
