--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										É importante lembrar que a jornada para a independência emocional pode ter altos e baixos, mas é possível superar os obstáculos com autocompaixão e paciência. 
 										</p>
 									<ul class="actions">
-										<li><a href="inf.html" class="button next">Mais informações sobre nosso grupo</a></li>
+										<li><a href="inf.html" class="button next">Informações do nosso Grupo</a></li>
 									</ul>
 								</div>
 							</section>
@@ -114,7 +114,7 @@
 							</ul>
 							<ul class="copyright">
 								<li>&copy; ETEC</li><li>feito por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Arthur Prado, Brayan C. & Ângelo I.</a></li>
-							    </li><li>Conteudo e Revisão por:<a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
+							    </li><li>Conteudo e Revisão por: <a id="azul" href=" https://arthurasilva.github.io/LacosInvisiveis/">Anna Beatriz</a></li>
 							</ul>
 						</div>
 					</footer>
